--- a/view/inc/top_page.html
+++ b/view/inc/top_page.html
@@ -29,6 +29,8 @@
     <script src="<?php echo SITE_PATH ?>module/search/view/js/ctrl_search.js"></script>
     <script src="<?php echo SITE_PATH ?>module/login/view/js/ctrl_login.js"></script>
 
+    <script src="<?php echo SITE_PATH ?>view/js/credentials.js"></script>
+
 
     <!-- C:\xampp\htdocs\proyectos\FRAMEWORK_CITYHOUSE\module\login\view\js\ctrl_login.js -->
     
