--- a/view/inc/top_page_login.html
+++ b/view/inc/top_page_login.html
@@ -30,6 +30,9 @@
 
     <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
 
+    <script src="<?php echo SITE_PATH ?>view/js/credentials.js"></script>
+
+
     <!-- C:\xampp\htdocs\proyectos\FRAMEWORK_CITYHOUSE\module\login\view\js\ctrl_login.js -->
 </body>
 </html>
