--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -26,6 +26,9 @@
 
     <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
 
+    <script src="<?php echo SITE_PATH ?>view/js/credentials.js"></script>
+
+
 
 <!--        
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
