--- a/view/inc/top_page_home.html
+++ b/view/inc/top_page_home.html
@@ -30,5 +30,7 @@
 
     <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
 
+    <script src="<?php echo SITE_PATH ?>view/js/credentials.js"></script>
+
 </body>
 </html>
