Añadimos el modulo de carrito y cargamos la view del modulo desde el shop y el header.

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -536,6 +536,33 @@ button.btn_filters:hover::before {
     z-index: 0;
 }
 
+.counter_likes {
+    display: inline-block;
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    padding: 6px 12px; 
+    border-radius: 5px; 
+    margin-left: 38px;   
+    /* background-color: #bab2b2;  */
+}
+
+.contador_likes {
+    margin-top: 178px;
+  }
+
+.carrito-button {
+    position: relative;
+    /* background-color: #aaa5a5; */
+    width: 33px;
+    height: 33px;
+    left: 580px;
+    bottom: 32px;
+    background-image: url('module/shop/view/img_shop/carrito-de-compras.png');
+    background-size: cover;
+    cursor: pointer;
+    z-index: 0;
+}
+
 </style>
 
 
