--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -27,6 +27,7 @@
     <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
 
     <script src="<?php echo SITE_PATH ?>view/js/credentials.js"></script>
+    <script src="<?php echo SITE_PATH ?>view/js/ctrl_carrousel.js"></script>
 
 
 
