--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -26,7 +26,7 @@
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                             data-target=".navbar-collapse">
                             <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>z
+                            <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
@@ -40,7 +40,7 @@
                             <li><a id='loginBtn1' class='login' href="/proyectos/FRAMEWORK_CITYHOUSE/login">Iniciar Sesión</a></li>
                             <!-- <li><a id='loginBtn1' class='login' href="#" onclick="openModal()">Iniciar Sesión</a></li> -->
                             <li><a class='logout'id="logoutBtn" onclick="logout()">Cerrar Sesión</a></li>
-                            </ul>
+                            <li><a class='carrito_header' id="carrito" onclick="load_carrito()"><img src="/proyectos/FRAMEWORK_CITYHOUSE/module/shop/view/img_shop/anadir-a-la-cesta.png" alt="Añadir a la cesta" /></a></li></ul>
                     </div> 
                     
                     <div class='filtros_header'>
