He añadido al carrito los 2 botones del carrito cuando te logeas, el del header y el del lado del details, he realizado el contador de productos en el carrito y que se incremente al meter nuevos productos. Tambien he modificado un pequeño bug que tenia anteriormente en el home, ya esta solucionado.

--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -29,6 +29,10 @@
     <script src="<?php echo SITE_PATH ?>view/js/credentials.js"></script>
     <script src="<?php echo SITE_PATH ?>view/js/ctrl_carrousel.js"></script>
 
+    <script src="<?php echo SITE_PATH ?>module/carrito/view/js/ctrl_carrito.js"></script>
+
+    
+
 
 
 <!--        
