--- a/view/css/style.css
+++ b/view/css/style.css
@@ -177,7 +177,7 @@ h1{
 .search__container {
 	position: fixed;
     top: 15px;
-	right: 30%;
+	right: 35%;
 }
 
 .search__input {
@@ -319,5 +319,68 @@ h1{
 .carrito_header img {
     width: 30px; 
     height: 30px;
+}
+@keyframes fly-to-cart {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    50% {
+        opacity: 0.7;
+        transform: translateY(-150px);
+    }
+    100% {
+        opacity: 0;
+        transform: translate(500px, -500px) scale(0.1);
+    }
+}
+
+.carrito-button {
+    position: relative;
+    cursor: pointer;
+    background-color: #f0c14b; /* Color del botón */
+    border: 1px solid #a88734;
+    border-radius: 4px;
+    padding: 8px 12px;
+    color: #111;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.fly-animation {
+    animation: fly-to-cart 1s forwards;
+}
+
+.contador_carrito {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 3px 6px;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
+    min-width: 20px;
+    display: inline-block;
+}
+
+.contador_carrito {
+    position: absolute;
+    top: 10px; /* Ajusta la posición vertical según tu diseño */
+    right: 10px; /* Ajusta la posición horizontal según tu diseño */
+    background-color: red; /* Color de fondo */
+    color: white; /* Color del texto */
+    border-radius: 50%; /* Hace que el contador sea redondo */
+    padding: 3px 6px; /* Espaciado interno */
+    font-size: 12px; /* Tamaño del texto */
+    font-weight: bold; /* Texto en negrita */
+    text-align: center; /* Alineación centrada del texto */
+    line-height: 1; /* Altura de línea */
+    min-width: 20px; /* Ancho mínimo */
+    display: inline-block; /* Mostrar en línea */
 }
 
