--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -40,8 +40,13 @@
                             <li><a id='loginBtn1' class='login' href="/proyectos/FRAMEWORK_CITYHOUSE/login">Iniciar Sesión</a></li>
                             <!-- <li><a id='loginBtn1' class='login' href="#" onclick="openModal()">Iniciar Sesión</a></li> -->
                             <li><a class='logout'id="logoutBtn" onclick="logout()">Cerrar Sesión</a></li>
-                            <li><a class='carrito_header' id="carrito" onclick="load_carrito()"><img src="/proyectos/FRAMEWORK_CITYHOUSE/module/shop/view/img_shop/anadir-a-la-cesta.png" alt="Añadir a la cesta" /></a></li></ul>
-                    </div> 
+                            <li style="position: relative;"> <!-- Añadido position: relative -->
+                                <a class='carrito_header' id="carrito" onclick="load_carrito()">
+                                    <img src="/proyectos/FRAMEWORK_CITYHOUSE/module/shop/view/img_shop/anadir-a-la-cesta.png" alt="Añadir a la cesta" />
+                                    <span id='contador_carrito' class='contador_carrito'>0</span>
+                                </a>
+                            </li>
+                        </div> 
                     
                     <div class='filtros_header'>
                         <div class='filtro_header'>
