He pintado los productos del carrito con datos de la BD más los precios, me queda contemplar el boton de  '+' y '-' junto al stock.

--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -41,7 +41,7 @@
                             <!-- <li><a id='loginBtn1' class='login' href="#" onclick="openModal()">Iniciar Sesión</a></li> -->
                             <li><a class='logout'id="logoutBtn" onclick="logout()">Cerrar Sesión</a></li>
                             <li style="position: relative;"> <!-- Añadido position: relative -->
-                                <a class='carrito_header' id="carrito" onclick="load_carrito()">
+                                <a class='carrito_header' id="carrito" onclick="load_carrito_view()">
                                     <img src="/proyectos/FRAMEWORK_CITYHOUSE/module/shop/view/img_shop/anadir-a-la-cesta.png" alt="Añadir a la cesta" />
                                     <span id='contador_carrito' class='contador_carrito'>0</span>
                                 </a>
