--- a/module/carrito/view/carrito.html
+++ b/module/carrito/view/carrito.html
@@ -167,27 +167,28 @@
                 <div class="row">
                     <div class="col"><h4><b>Shopping Cart</b></h4></div>
                     <div class="col align-self-center text-right text-muted"></div>
-                    <div class="vaciar_carrito"><img src="module\shop\view\img_shop\carro-vacio.png" alt=""></div>
+                    <div class="vaciar_carrito"><img src="module/shop/view/img_shop/carro-vacio.png" alt=""></div>
                 </div>
-            </div>    
+            </div>
             <div class="back-to-shop"><a href="http://localhost/proyectos/FRAMEWORK_CITYHOUSE/shop">&leftarrow;</a><span class="text-muted">Back to shop</span></div>
         </div>
         <div class="col-md-4 summary">
             <div><h5><b>Summary</b></h5></div>
             <hr>
             <div class="row">
-                <div class="col" style="padding-left:0;">ITEMS 3</div>
-                <div class="col text-right">&euro; 132.00</div>
+                <div class="col" style="padding-left:0;"></div>
+                <div class="col text-right"></div>
             </div>
             <form>
-                <p>SHIPPING</p>
-                <select><option class="text-muted">Standard-Delivery- &euro;5.00</option></select>
                 <p>GIVE CODE</p>
                 <input id="code" placeholder="Enter your code">
+                <div class="num_vivienda_and_price">
+                    <!-- Dinamic Table will be inserted here -->
+                </div>
             </form>
             <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
                 <div class="col">TOTAL PRICE</div>
-                <div class="col text-right">&euro; 137.00</div>
+                <div class="col text-right"></div>
             </div>
             <button class="btn">CHECKOUT</button>
         </div>
