Añadimos las facturas dinamicas cuando hacemos el checkout del carrito y restar el stock de las viviendas compradas.

--- a/module/carrito/view/carrito.html
+++ b/module/carrito/view/carrito.html
@@ -190,7 +190,7 @@
                 <div class="col">TOTAL PRICE</div>
                 <div class="col text-right"></div>
             </div>
-            <button class="btn">CHECKOUT</button>
+            <button class="btn checkout">CHECKOUT</button>
         </div>
     </div>
 </div>
