--- a/view/inc/top_page_profile.html
+++ b/view/inc/top_page_profile.html
@@ -34,6 +34,7 @@
     <script src="<?php echo SITE_PATH ?>view/js/ctrl_carrousel.js"></script>
 
     <script src="<?php echo SITE_PATH ?>module/carrito/view/js/ctrl_carrito.js"></script>
+    <script src="<?php echo SITE_PATH ?>module/profile/view/js/ctrl_profile.js"></script>
 
 
 </body>
