Añadida la funcionalidad cuando hago el chechk out de las viviendas, restear el stock de la cantidad comprada. Cargamos dinamicamente las facturas y he añadido la creacioón de pdf de la factura correctamente, falta trasladar la logica a un archivo independeinte que lo tengo todo en el bll.

--- a/module/profile/view/facturas.html
+++ b/module/profile/view/facturas.html
@@ -8,49 +8,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-    <br><br><br><br>
-    <div class="invoice">
-        <div class="icons-factura">
-            <a href="#" class="download"><img src="/proyectos/FRAMEWORK_CITYHOUSE/view/images/profile/flecha-hacia-abajo.png" alt="Descargar"></a>&nbsp;&nbsp;
-            <a href="#" class="qr"><img src="/proyectos/FRAMEWORK_CITYHOUSE/view/images/profile/codigo-qr.png" alt="QR"></a>
-        </div>
-        <div class="header_prof">
-            <h1>Factura</h1>
-            <p>Num Factura</p>
-        </div>
-        <div class="details">
-            <div class="left">
-                <p><strong>Cliente:</strong></p>
-                <p><strong>Fecha:</strong></p>
-            </div>
-            <div class="right">
-                <p><strong class="toalprice_fact">Precio Total:</strong></p>
-                <p><strong>Estado:</strong></p>
-            </div>
-        </div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Tipo Vivienda</th>
-                    <th>Cantidad</th>
-                    <th>Precio unitario</th>
-                    <th>Precio por linea</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- El contenido de esta tabla se llenará dinámicamente -->
-            </tbody>
-        </table>
-    </div>
-    <br><br><br>
+
 <style>
   body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
-.toalprice_fact{
-    background-color: red;
 }
 
 .icons-factura img{
@@ -62,7 +25,7 @@
 .invoice {
     width: 80%;
     margin: 20px auto;
-    background-color: #f9f9f9;
+    background-color: #e4f6c6;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
