Añadimos toda la vista de my likes y pintamos todas las viviendas que le dimos like donde podemos quitar las viviendas que no queremos quitandole el like.

--- a/module/profile/view/likes.html
+++ b/module/profile/view/likes.html
@@ -5,12 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My likes</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@latest"></script>
+    <link rel="stylesheet" href="module\home\view\css\carrusels_css.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+           
+
+    <script src='https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="/proyectos/FRAMEWORK_CITYHOUSE/module/shop/view/css/css_html_shop.css">
+    <!-- <script src='/proyectos/FRAMEWORK_CITYHOUSE/module/shop/view/js/ctrl_shop.js'></script> -->
+
+
 
 </head>
-<br><br><br><br>
-<div class="Mylikes">
-    
-</div>
-<br><br><br>
+
+<body>
+  <br> <br> <br> <br> 
+  <div class="container" id="content_shop_vivienda"></div>
+</body>
+
+
+
