--- a/view/inc/top_page_profile.html
+++ b/view/inc/top_page_profile.html
@@ -3,39 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alta de Vivienda</title>
+    <title>Perfil</title>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/redmond/jquery-ui.css" />
     <link href="view/css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
-    
 </head>
 <body>
     <!-- CONTENT -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <!-- LOG OUT -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
-
     <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
     <script src="<?php echo SITE_PATH ?>view/js/main.js"></script>
     <script src="<?php echo SITE_PATH ?>module/home/view/js/ctrl_home.js"></script>
     <script src="<?php echo SITE_PATH ?>view/js/promises.js"></script>
-    <!-- <?php echo SITE_PATH ?> -->
-
-    <!--js-->
-    <!-- <script src="module/home/ctrl/ctrl_home.class.php"></script> -->
     <script src="<?php echo SITE_PATH ?>module/search/view/js/ctrl_search.js"></script> 
     <script src="<?php echo SITE_PATH ?>module/login/view/js/ctrl_login.js"></script>
-
     <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
-
     <script src="<?php echo SITE_PATH ?>view/js/credentials.js"></script>
     <script src="<?php echo SITE_PATH ?>view/js/ctrl_carrousel.js"></script>
-
     <script src="<?php echo SITE_PATH ?>module/carrito/view/js/ctrl_carrito.js"></script>
     <script src="<?php echo SITE_PATH ?>module/profile/view/js/ctrl_profile.js"></script>
-
-
 </body>
 </html>
