Acabado el generador qr y pdf funcional, quedaria el file upload.

--- a/module/profile/view/likes.html
+++ b/module/profile/view/likes.html
@@ -24,6 +24,8 @@
 <body>
   <br> <br> <br> <br> 
   <div class="container" id="content_shop_vivienda"></div>
+  <div class="error-message" id="error_message"></div>
+
 </body>
 
 
