--- a/module/shop/view/css/css_html_shop.css
+++ b/module/shop/view/css/css_html_shop.css
@@ -765,3 +765,32 @@ color: #000;
 position: fixed;
 margin-top: 20px;
 }
+
+
+.error-message h1{
+  text-align: center;
+  color: #000;
+}
+
+#error_message img {
+  display: block;
+  margin: 0 auto;
+}
+
+#go_to_shop {
+  display: block;
+  margin: 0 auto;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#go_to_shop:hover {
+  background-color: #45a049;
+}
