He añadido el change del email en el profile, donde para que cambie el email no tiene que existir en base de datos y debe cumplir la arquitectura del email con el @..., una vez se cambie el email, se le deslogeara borrando los users_token y enviaremos un email de verificacion al email acordado.

--- a/module/profile/view/profile.html
+++ b/module/profile/view/profile.html
@@ -108,6 +108,33 @@
             background-color: #218838;
             transform: translateY(-2px);
         }
+
+        /*  */
+        #email-change-form {
+            margin-top: 10px;
+        }
+
+        #email-change-form input[type="text"] {
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+
+        #email-change-form button {
+            background-color: #28a745;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 5px 10px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        #email-change-form button:hover {
+            background-color: #218838;
+            transform: translateY(-2px);
+        }
     </style>
 </head>
 <body>
