Añadimos el cambio de contraseña donde caundo se solicita el cambio, que se envie un cambio de contraseña en el email para mayor seguridad. Más un drop_file para cambiar la imagen del avatar del usuario, donde cuando pulsa cambiar el avatar, se me guarda la imagen en local, con nombre img_usuario.png,jpg... donde para recuperar la ruta hago un split de las imagenes para filtrar la del usuario y poder guardarla en base de datos decodificando el username con el token para poder almacenar la img correspondeinte de ese usuario.

--- a/module/profile/view/profile.html
+++ b/module/profile/view/profile.html
@@ -109,7 +109,6 @@
             transform: translateY(-2px);
         }
 
-        /*  */
         #email-change-form {
             margin-top: 10px;
         }
@@ -143,6 +142,7 @@
             <div class="avatar-container">
                 <img src="avatar-placeholder.png" alt="Avatar" class="avatar_profile" id="avatar_profile">
                 <form action="/upload" class="dropzone" id="avatar-dropzone" style="display: none;"></form>
+                <button class="btn" id="change-avatar" style="display: none;">Change</button>
             </div>
             <div class="user-info">
                 <div class="info-item">
