He añadido elmapbox en el details, solucionado un pequeño bug del clicks home del cusm_rooms. Y depurado todo el profile junto al carrito, QR y PDF

--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -56,7 +56,7 @@
     <br><br><br>
 
     <!-- LIBRERIAS -->
-
+    <script src="/proyectos/FRAMEWORK_CITYHOUSE/module/shop/view/js/ctrl_shop.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
  
