--- a/module/profile/view/profile.html
+++ b/module/profile/view/profile.html
@@ -20,7 +20,7 @@
             background-color: #fff;
             border-radius: 15px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-            width: 450px;
+            width: 750px;
             padding: 30px;
             text-align: center;
         }
@@ -51,6 +51,7 @@
             align-items: center;
             justify-content: space-between;
             margin-bottom: 20px;
+            font-size: 25px;
         }
 
         .label {
@@ -88,10 +89,11 @@
         }
 
         #username-change-form input[type="text"] {
-            padding: 5px;
+            padding: 10px;
+            width: 400px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            margin-right: 10px;
+            margin-right: 20px;
         }
 
         #username-change-form button {
@@ -114,7 +116,8 @@
         }
 
         #email-change-form input[type="text"] {
-            padding: 5px;
+            padding: 10px;
+            width: 400px;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin-right: 10px;
@@ -164,6 +167,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/dropzone.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@latest"></script>
 </body>
 </html>
