--- a/module/shop/view/css/css_html_shop.css
+++ b/module/shop/view/css/css_html_shop.css
@@ -1,15 +1,15 @@
 
-#map {
+/* #map {
   position: fixed;
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  width: 600px; /* Ancho del mapa */
-  height: 480px; /* Alto del mapa */
-  border-radius: 10px; /* Borde redondeado */
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra */
+  width: 600px;
+  height: 480px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
   z-index: 2;
-}
+} */
 .carousel-item {
         display: flex;
         align-items: center;
@@ -699,6 +699,7 @@ padding: 0;
 max-width: 1200px;
 margin: 0 auto;
 padding: 20px;
+margin-bottom: 270px;
 }
 
 .title_details {
