He añadido la vista de publicar tu propio ad y creado el html correctamente.

--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -54,6 +54,7 @@
                                 </a>
                             </li>
                         </ul>
+                        <a class='pub_ad' id="pub_ad"  href="/proyectos/FRAMEWORK_CITYHOUSE/ad">Public free AD</a>
                     </div> 
                     <!-- #Nav Ends -->
                     <div class='filtros_header'>
@@ -131,6 +132,20 @@
   
     .dropdown-content a:hover {
       background-color: #ddd;
+    }
+    .pub_ad {
+        left: 1220px;
+        bottom: -20px;
+        position: relative;
+        padding: 10px 20px;
+        background-color: #4CAF50;
+        color: white; 
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        text-decoration: none;
+
     }
   </style>
 
